Bug 896429 - Signaling: dynamically create SDP config r=abr