media/webrtc/signaling/src/sipcc/core/sdp/sdp_config.c
@@ -41,13 +41,17 @@ tinybool sdp_verify_conf_ptr (sdp_conf_options_t *conf_p)
  * Parameters:	None.
  * Returns:	A handle for the configuration as a void ptr.
  */
-sdp_conf_options_t sdp_config_options;
 void *sdp_init_config ()
 {
     int i;
     sdp_conf_options_t *conf_p;
 
-    conf_p = & sdp_config_options;
+    conf_p = SDP_MALLOC(sizeof(sdp_conf_options_t));
+
+    if (!conf_p) {
+        CSFLogError(logTag, "SDP: could not allocate configuration object.");
+        return NULL;
+    }
 
     /* Initialize magic number. */
     conf_p->magic_num = SDP_MAGIC_NUM;
@@ -102,7 +106,6 @@ void *sdp_init_config ()
 
     return (conf_p);
 }
-
 
 /* Function:    void sdp_appl_debug(void *config_p, sdp_debug_e debug_type,
  *                                  tinybool my_bool);
